# lab5-async-server

./: .clang-format  .gitignore  CMakeLists.txt  EchoHandler.cpp  EchoHandler.h  LongRequestHandler.cpp  LongRequestHandler.h  README.md  conanfile.txt  config.json  main.cpp
.github/: workflow.yml
algo/: AsyncMergeSort.cpp  AsyncMergeSort.h
client/: client.py
client/input/: bamboo.txt  big-graph.txt  binary_tree.txt  full-graph-20-vertex.txt  graph-1.txt  graph-2.txt  graph-4.txt  hedgehog.txt  huge-graph.txt
examples/: main.cpp
graphgen/: CMakeLists.txt  graphgen.cpp  graphgen.h
graphgen/include/graph/: Graph.h
graphgen/include/graph/algo/: FruchtermanReingold.h
graphgen/include/image/: BMP.h  DigitsDrawer.h
graphgen/include/math/: structures.h
graphgen/resources/: resourses.h
graphgen/resources/digits/: 5.txt  8.txt
graphgen/src/graph/: Graph.cpp
graphgen/src/graph/algo/: FruchtermanReingold.cpp
graphgen/src/image/: BMP.cpp
graphgen/src/math/: structures.cpp
handlers/: EchoHandler.cpp  EchoHandler.h  LongRequestHandler.h  SortHandler.cpp  SortHandler.h  UploadHandler.cpp  UploadHandler.h
include/exceptions/: EndpointExceptions.h  GenerationExceptions.h  SocketExceptions.h
include/files/: FileManager.h
include/logging/: Logger.h
include/multithreading/: README.md  ThreadPool.h
include/server/: README.md  Response.h  Server.h
include/server/handlers/: AmogusHandler.h  DownloadHandler.h  EchoHandler.h  GenerationHandler.h  IHandler.h  UploadHandler.h
include/socket/: ClientSocket.h  ListenerSocket.h  README.md  Socket.h
resources/resources/digits/: 0.txt  1.txt  2.txt  4.txt  7.txt  9.txt
resourses/: amogus.txt
resourses/resources/digits/: 3.txt  6.txt
scripts/: benchmark.py  build-and-run.sh  build.sh  clang-format.py  graph.txt
server_lib/: CMakeLists.txt
server_lib/server/: Exceptions.h  PollingWrapper.h  Server.cpp  Server.h  Socket.cpp  Socket.h  log.h  typenames.h
server_lib/server/handlers/: AbstractHandler.cpp  AbstractHandler.h  EndpointHandler.cpp  EndpointHandler.h
server_lib/server/thread-pool/: Pool.cpp  Pool.h
server_lib/socket/: Socket.cpp  Socket.h  SocketException.cpp  SocketException.h
src/ThreadPool/: Pool.cpp  Pool.h  PoolWorker.cpp  PoolWorker.h
src/database/: ConnectionPool.cpp  ConnectionPool.h  Files.h
src/files/: FileManager.cpp
src/libs/graph-bmp-generator/: CMakeLists.txt
src/libs/graph-bmp-generator/src/graph/: Graph.cpp  Graph.h
src/libs/graph-bmp-generator/src/graph/algo/: FruchtermanReingold.cpp  FruchtermanReingold.h
src/libs/graph-bmp-generator/src/image/: BMP.cpp  BMP.h  DigitsDrawer.h
src/libs/graph-bmp-generator/src/math/: structures.cpp  structures.h
src/libs/thread-pool/: CMakeLists.txt  Pool.cpp  Pool.h
src/logging/: Logger.cpp
src/multithreading/: ThreadPool.cpp
src/server/: Exceptions.h  Params.h  PollingWrapper.cpp  PollingWrapper.h  Response.cpp  Server.cpp  Server.h  Socket.h  log.h  typenames.h
src/server/handlers/: AbstractHandler.cpp  AbstractHandler.h  AmogusHandler.cpp  DownloadHandler.cpp  EchoHandler.cpp  EndpointHandler.cpp  EndpointHandler.h  FileDownloadHandler.cpp  FileDownloadHandler.h  FileUploadHandler.cpp  FileUploadHandler.h  GenerationHandler.cpp  RequestGenerationHandler.cpp  RequestGenerationHandler.h  ResultRequestHandler.cpp  ResultRequestHandler.h  UploadHandler.cpp
src/server/thread-pool/: Pool.h
src/socket/: ClientSocket.cpp  ListenerSocket.cpp  Socket.cpp
src/utils/: StringUtils.cpp  StringUtils.h
test/: uploader-test.py
tests/: test-upload.py  upload-test.py
uploads/: 71qLUjaRsdFI5vCdbo0LIJ68qLne5X1K.txt  MC9fbWWAmqW5DZXwylrzvpGutff0jGgu.txt
